# fast_ticc

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  fast_ticc_development.yml  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  how_ticc_works.rst  index.rst  installation.rst  plans.rst  quirks.rst  tutorial.rst  user_guide.rst
src/fast_ticc/: LICENSE  __init__.py  cluster_label_assignment.py  cluster_maintenance.py  cluster_metrics.py  data_preparation.py  front_end.py  graphical_lasso.py  likelihood.py  main_loop.py  matrix_compression.py  numba_guard.py  ticc_types.py
tests/: __init__.py  conftest.py  test_cluster_repopulation.py  test_import_ticc.py  test_ticc_catch_wrong_front_end_call.py  test_ticc_data_stacking.py  test_ticc_initial_labels.py  test_ticc_multiple_trajectories.py  test_ticc_single_trajectory.py  test_ticc_single_trajectory_numba_enabled.py
tests/fixtures/: __init__.py
tests/test_data/: multiple_trajectory_features.pkl  multiple_trajectory_initial_labels.pkl  multiple_trajectory_stacked_data.pkl  single_trajectory_features.pkl  single_trajectory_stacked_data.pkl
tests/test_ticc_data_stacking/: test_ticc_data_stacking_single.npz
tests/test_ticc_initial_labels/: test_ticc_multiple_trajectory_initial_labels.csv  test_ticc_single_trajectory_initial_labels.csv
tests/test_ticc_multiple_trajectories/: test_ticc_multiple_trajectory_bayesian_information_criterion.csv  test_ticc_multiple_trajectory_calinski_harabasz_index.csv  test_ticc_multiple_trajectory_cluster_log_likelihood.csv  (+3 more)
(+17 files in other folders)
